--- a/Project.CoreMVC/Project.CoreMVC.csproj
+++ b/Project.CoreMVC/Project.CoreMVC.csproj
@@ -24,6 +24,8 @@
 
   <ItemGroup>
     <Folder Include="Areas\Admin\Data\" />
+    <Folder Include="Areas\Developer\Data\" />
+    <Folder Include="Areas\Developer\Models\" />
     <Folder Include="wwwroot\OutherTools\assets\jquery-file-upload\server\php\files\thumbnail\" />
   </ItemGroup>
 
